SERVER-21093: Make ordered bulk insert operation error out properly